# bmad-qdrant-knowledge-management

./: .env.example  .gitignore  AGENT_TRAINING_GUIDE.md  ARCHITECTURE.md  BEGINNER_GUIDE.md  BMAD_INTEGRATION_RULES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  LICENSE  QDRANT_COLLECTION_SETUP.md  QDRANT_MCP_SETUP_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  TROUBLESHOOTING.md  config.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
demo/: README.md  agent_spec.json  architecture_decision.json  error_pattern.json  story_outcome.json
example_population/: README.md  example_agent_spec.py  example_architecture_decision.py  example_story_outcome.py
examples/: README.md  search_patterns.py  store_agent_spec.py  store_architecture_decision.py  store_best_practice.py
metadata-schemas/: README.md  agent_spec.json  architecture_decision.json  best_practice.json  config_pattern.json  database_schema.json  error_pattern.json  integration_example.json  story_outcome.json
scripts/: README.md  create_collections.py  populate_knowledge_base_optimized.py  qdrant_cleanup.py  run.sh
tracking/: README.md  knowledge_inventory.md  review_log.md
validation/: README.md  check_duplicates.py  conftest.py  pre_storage_validator.py  run_all_tests.sh  test_all_schemas.py  test_duplicate_detection.py  test_inventory_updates.py  test_monthly_review.py  test_security_hardening.py  test_storage_workflow.py  test_validation_comprehensive.py  update_inventory.py  validate_metadata.py
