[project]
name = "bmad-qdrant-knowledge-management"
version = "1.1.1"
description = "Institutional memory system for AI-assisted development using Qdrant vector database"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hidden-History"}
]
keywords = [
    "bmad",
    "qdrant",
    "knowledge-management",
    "mcp",
    "ai-assistant",
    "vector-database",
    "claude"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/Hidden-History/bmad-qdrant-knowledge-management"
Documentation = "https://github.com/Hidden-History/bmad-qdrant-knowledge-management#readme"
Repository = "https://github.com/Hidden-History/bmad-qdrant-knowledge-management.git"
Issues = "https://github.com/Hidden-History/bmad-qdrant-knowledge-management/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file
    "F401",  # imported but unused (example scripts may have extras)
    "F541",  # f-string without placeholders
]

[tool.pytest.ini_options]
testpaths = ["validation"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
